[gd_scene format=3 uid="uid://1"]

[node name="LobbyScene" type="Control"]
size = Vector2(1280, 720)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
size_flags_vertical = 0
alignment = 1

[node name="CreateLobbyButton" type="Button" parent="VBoxContainer/TopBar"]
text = "Создать лобби"
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopBar"]
size_flags_expand = 1

[node name="LobbyCodeInputLabel" type="Label" parent="VBoxContainer/TopBar/HBoxContainer"]
text = "Код лобби:"
vertical_alignment = 1

[node name="LobbyCodeInput" type="LineEdit" parent="VBoxContainer/TopBar/HBoxContainer"]
placeholder_text = "Введите код лобби"
size_flags_expand = 1

[node name="JoinLobbyButton" type="Button" parent="VBoxContainer/TopBar/HBoxContainer"]
text = "Присоединиться"

[node name="LeaveLobbyButton" type="Button" parent="VBoxContainer/TopBar"]
text = "Покинуть лобби"
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartGameButton" type="Button" parent="VBoxContainer/TopBar"]
text = "Начать игру"
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainContainer" type="HBoxContainer" parent="VBoxContainer"]
size_flags_expand = 1

[node name="LobbyList" type="Panel" parent="VBoxContainer/MainContainer"]
size_flags_expand = 1
mouse_filter = 1

[node name="LobbyListLabel" type="Label" parent="VBoxContainer/MainContainer/LobbyList"]
text = "Доступные лобби"
position = Vector2(10, 10)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/LobbyList"]
position = Vector2(10, 35)
anchor_right = 1.0
anchor_bottom = 1.0
size = Vector2(590, 605)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/LobbyList/ScrollContainer"]

[node name="LobbyInfo" type="Panel" parent="VBoxContainer/MainContainer"]
custom_minimum_size = Vector2(300, 0)
mouse_filter = 1

[node name="LobbyNameLabel" type="Label" parent="VBoxContainer/MainContainer/LobbyInfo"]
text = "Название лобби"
position = Vector2(10, 10)

[node name="PlayerCountLabel" type="Label" parent="VBoxContainer/MainContainer/LobbyInfo"]
text = "0/0"
horizontal_alignment = 2
position = Vector2(0, 35)
anchor_right = 1.0
size = Vector2(300, 20)

[node name="PlayerListLabel" type="Label" parent="VBoxContainer/MainContainer/LobbyInfo"]
text = "Игроки:"
position = Vector2(10, 60)

[node name="PlayerList" type="Panel" parent="VBoxContainer/MainContainer/LobbyInfo"]
position = Vector2(10, 85)
anchor_right = 1.0
anchor_bottom = 1.0
size = Vector2(280, 555)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/LobbyInfo/PlayerList"]
anchor_right = 1.0
anchor_bottom = 1.0
size = Vector2(280, 555)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/LobbyInfo/PlayerList/ScrollContainer"]

[gd_resource type="Script" path="res://client/scripts/lobby/lobby_ui.gd" id="Script_1"]
class_name "LobbyUI"

[node name="LobbyScene" type="Control"]
script = ExtResource("Script_1")
</node>